@@ -1,3 +1,11 @@
+2001-03-12  Robin * Slomkowski  <rslomkow@rslomkow.org>
+
+	* configure.in: upped version to 1.0, upped version required
+	  for ammonite, gnome-vfs, medusa
+	* nautilus.spec.in: upped version of ammonite required
+	  added gnome-user-docs to nautilus-extras, and changed
+	  to using candidate build message.
+
 2001-03-10  Eskil Olsen  <eskil@eazel.com>
 
 	reviewed by: Robey Pointer
